--- a/style.css
+++ b/style.css
@@ -29,18 +29,39 @@ body, html {
     position: absolute;
     width: 300px;
     left: 0;
-    -webkit-transition: all 300ms ease-out;
-    -moz-transition: all 300ms ease-out;
-    -o-transition: all 300ms ease-out;
-    -ms-transition: all 300ms ease-out;
-    transition: all 300ms ease-out;
 }
 
 #album article {
     position: relative;
+    margin-top: 0px;
+    background-color: rgba(255, 255, 255, 0.8);
     height: 300px;
     padding: 2em;
     box-sizing: border-box;
+    animation: naarBoven 1s forwards;
+}
+
+#album:hover article {
+    animation: naarBeneden 1s forwards;
+}
+
+@keyframes naarBoven{
+    0% {margin-top: 0px;}
+    10% {margin-top: -200px;}
+    30% {margin-top: -250px;}
+    50% {margin-top: -265px;}
+    70% {margin-top: -280px;}
+    90% {margin-top: -295px;}
+    20%, 40%, 60%, 80%, 100%{margin-top: -305px;}
+}
+
+@keyframes naarBeneden{
+    0% {margin-top: -305px;}
+    30%{margin-top: -100px;}
+    50%{margin-top: -50px;}
+    70%{margin-top: -35px;}
+    90%{margin-top: -10px;}
+    20%, 40%, 60%, 80%, 100%{margin-top: 0;}
 }
 
 #album article ul{
@@ -55,32 +76,14 @@ body, html {
 #album #box {
     width: 300px;
     height: 300px;
-    background-color: gainsboro;
     position: absolute;
     left: 0;
     top: 0;
     color: red;
     z-index: 100;
-    opacity: 0;
-    -webkit-transition: all 300ms ease-out;
-    -moz-transition: all 300ms ease-out;
-    -o-transition: all 300ms ease-out;
-    -ms-transition: all 300ms ease-out;
-    transition: all 300ms ease-out;
-}
-
-#album:hover #box {
-    opacity: 1;
 }
 
 #album #text {
-    -webkit-transition: all 300ms ease-out;
-    -moz-transition: all 300ms ease-out;
-    -o-transition: all 300ms ease-out;
-    -ms-transition: all 300ms ease-out;
-    transition: all 300ms ease-out;
-    transform: translateY(40px);
-    -webkit-transform: translateY(40px);
     font-size: 10px;
     text-align: center;
 }
@@ -88,16 +91,13 @@ body, html {
 #album #title {
     font-size: 0,2em;
     height: 300px;
-    opacity: 0;
-    transition-delay: 0.1s;
-    transition-duration: 0.2s;
 }
 
-#album:hover #title, #album:focus #title {
-    opacity: 1;
-    transform: translateY(0px);
-    -webkit-transform: translateY(0px);
-}
+
+    
+
+
+
 
 
     
